# Beautiful-Captions

./: .codcov.yml  .gitignore  Contributing.md  LICENSE  MANIFEST.in  README.md  benchmark.py  demo.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tests.py
.github/workflows/: ci.yml  publish.yml
src/: __init__.py
src/beautiful_captions/: __init__.py
src/beautiful_captions/core/: caption.py  config.py  types.py  video.py
src/beautiful_captions/styling/: animation.py  style.py
src/beautiful_captions/transcription/: assemblyai.py  base.py
src/beautiful_captions/utils/: ffmpeg.py  subtitles.py
src/core/: config.py  video.py
src/styling/: animation.py
src/tests/: base_config.py  conftest.py  test-captions-config-creaton.py  test-group-words-into-lines.py  test-style-config.py  test-style-srt-content.py  test_animation.py  test_caption.py  test_color_to_ass.py  test_config.py  test_generation.py  test_style.py  test_transcription.py  test_video.py
src/tests/integration/: test_integration.py
src/transcription/: assemblyai.py
src/utils/: ffmpeg.py  subtitles.py
