[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "beautiful-captions"
version = "0.1.0"
description = "A fast and elegant Python library for adding beautiful captions to videos"
readme = "README.md"
authors = [
    { name = "Aayush", email = "aayugupta04@gmail.com" }
]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
keywords = ["video", "captions", "subtitles", "transcription"]
dependencies = [
    "pysrt>=1.1.2",
    "assemblyai>=0.17.0",
    "deepgram-sdk>=2.11.0",
    "openai>=1.0.0",
    "python-dotenv>=0.19.0",
    "aiohttp>=3.8.0",
    "ffmpeg-python>=0.2.0",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/aayushgupta16/beautiful-captions"
Repository = "https://github.com/aayushgupta16/beautiful-captions.git"
Documentation = "https://beautiful-captions.readthedocs.io/"
"Bug Tracker" = "https://github.com/aayushgupta16/beautiful-captions/issues"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term-missing"
markers = [
    "integration: marks tests as integration tests",
]