[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beautiful-captions"
version = "0.1.71"
description = "A fast and elegant Python library for adding beautiful captions to videos"
readme = "README.md"
authors = [
    { name = "Aayush", email = "aayugupta04@gmail.com" }
]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
keywords = ["video", "captions", "subtitles", "transcription"]
dependencies = [
    "pysrt>=1.1.2",
    "assemblyai>=0.17.0",
    "deepgram-sdk>=2.11.0",
    "openai>=1.0.0",
    "python-dotenv>=0.19.0",
    "aiohttp>=3.8.0",
    "ffmpeg-python>=0.2.0",
]
requires-python = ">=3.8"

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-xdist>=3.0",
    "build>=1.0",
    "ruff>=0.8.0",
    "ty>=0.0.1a0",
]

[project.urls]
Homepage = "https://github.com/aayushgupta16/beautiful-captions"
Repository = "https://github.com/aayushgupta16/beautiful-captions.git"
Documentation = "https://beautiful-captions.readthedocs.io/"
"Bug Tracker" = "https://github.com/aayushgupta16/beautiful-captions/issues"

[tool.ruff]
target-version = "py38"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["beautiful_captions"]

[tool.ty.environment]
python-version = "3.12"
root = ["./src"]

[tool.ty.rules]
possibly-unresolved-reference = "warn"

[tool.ty.analysis]
allowed-unresolved-imports = [
    "pysrt",
    "assemblyai",
    "deepgram",
    "ffmpeg",
    "aiohttp",
]

[tool.basedpyright]
venvPath = "."
venv = ".venv"
reportUninitializedInstanceVariable = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
beautiful_captions = ["**/*.py", "fonts/*", "**/*.ttf"]
